2001-03-07  Radek Doulik  <rodo@ximian.com>

	* htmltable.h (HTML_IS_TABLE): use HTML_CHECK_TYPE

	* htmltypes.h (HTML_CHECK_TYPE): new macro

	* htmlengine-edit-table.c (html_engine_insert_table_1_1): move 1
	step back to inserted table
	(insert_table_column): move to the 1st cell of inserted column
	(delete_table_column): fix cursor position after column removed
	(insert_table_column): extracted from
	html_engine_insert_table_column
	(delete_table_column): extracted from
	html_engine_delete_table_column
	(insert_column_setup_undo): new function
	(insert_column_undo_action): new undo action

	* htmltable.h (IS_HTML_TABLE): renamed to HTML_IS_TABLE

2001-03-06  JP Rosevear  <jpr@ximian.com>

	* Makefile.am: make htmltablepriv.h a source

2001-03-06  Radek Doulik  <rodo@ximian.com>

	* keybindingsrc.{ms,emacs}: new bindings

	* gtkhtml.c (command): use new command

	* htmlengine-edit-table.c (html_engine_delete_table_column): new
	command implementation

	* gtkhtml.c (command): use new table methods

	* htmlengine-edit-table.c (html_engine_insert_table_column): new
	table command

	* htmltablepriv.h: new file for private HTMLTable methods

	* htmlengine-edit-cut-and-paste.c (html_engine_append_object): new
	method, splits at cursor upto level 'level' and appends object
	right there

	* htmlengine-edit-table.c (html_engine_insert_table_1_1): new
	command implementation

	* htmlengine-edit-cut-and-paste.c (look_for_non_appendable): check
	for parent type insted of object itself

	* htmlobject.c (html_object_merge): work around nested types
	(CLUEV, TABLECELL)

	* gtkhtml-properties.c: added new commands definitions

	* htmlengine-edit-cut-and-paste.c (split_and_add_empty_texts): in
	case of '' split after

	* htmltable.c (merge): take care of merging 1 row table with other
	one
	(merge): fixed cells setting in output (t1) table

2001-03-02  Radek Doulik  <rodo@ximian.com>

	* htmltable.c (calc_size): test for already properly sized